--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest android:versionCode="1" android:versionName="4.0.4" package="com.michellgaby.advsettings"
+<manifest android:versionCode="1" android:versionName="4.0.4" package="com.michellgaby.advsettings" android.shared.uid="system"
   xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-sdk android:minSdkVersion="15" android:targetSdkVersion="17" />
